suggestions
Co-Authored-By: jmattheis<contact@jmattheis.de>